--- a/src/resource/views/favorable.hbs
+++ b/src/resource/views/favorable.hbs
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-6">
                         <div class="img-KM-container">
-                            <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
+                            <a href="#">
                                 <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
                             </a>
                             
@@ -40,81 +40,7 @@
                         </div>
                     </div>
     
-                    <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div class="img-KM-container">
-                            <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
-                            </a>
-
-                            <div class="caption">
-                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
-                                <br>
-                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
-                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                    <div class="chi-tiet-btn">
-                                        <button class="chi-tiet">CHI TIẾT</button>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-    
-                    <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div class="img-KM-container">
-                            <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
-                            </a>
-
-                            <div class="caption">
-                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
-                                <br>
-                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
-                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                    <div class="chi-tiet-btn">
-                                        <button class="chi-tiet">CHI TIẾT</button>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-    
-                    <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div class="img-KM-container">
-                            <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
-                            </a>
-
-                            <div class="caption">
-                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
-                                <br>
-                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
-                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                    <div class="chi-tiet-btn">
-                                        <button class="chi-tiet">CHI TIẾT</button>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-    
-                    <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div class="img-KM-container">
-                            <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
-                            </a>
-
-                            <div class="caption">
-                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
-                                <br>
-                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
-                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
-                                    <div class="chi-tiet-btn">
-                                        <button class="chi-tiet">CHI TIẾT</button>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 
             </div>
@@ -164,7 +90,7 @@
 
                 <div class="row">
                     <div class="col-md-13 col-sm-12 col-xs-12 movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
+                        <a href="#">
                             <img class="img-phim" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
                         
                             <div class="mua-ve-PDC-btn">
@@ -175,29 +101,7 @@
                         <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
                     </div>
                     
-                    <div class="col-md-13 col-sm-12 col-xs-12 movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="img-phim" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                        
-                            <div class="mua-ve-PDC-btn">
-                                <p><label class="old">C13</label></p>
-                                <button class="mua-ve-PDC">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                    </div>
-
-                    <div class="col-md-13 col-sm-12 col-xs-12 movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="img-phim" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                        
-                            <div class="mua-ve-PDC-btn">
-                                <p><label class="old">C13</label></p>
-                                <button class="mua-ve-PDC">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                    </div>
+                    
                 </div>
 
                 <div class="xem-them-btn">
