--- a/src/resource/views/movie_blog.hbs
+++ b/src/resource/views/movie_blog.hbs
@@ -29,13 +29,13 @@
                 <div class="movie-item">
                     <div class="row">
                         <div class="movie-image col-md-3">
-                            <a href="#">
+                            <a href="/chi-tiet-blog-dien-anh/{{matin}}">
                                 <img src="{{this.hinhanh}}">
                             </a>
                         </div>
                         <div class="movie-info col-md-8">
                             <div class="movie-name">
-                                <a href="#"><h5>{{this.tieude}}</h5></a>
+                                <a href="/chi-tiet-blog-dien-anh/{{matin}}"><h5>{{this.tieude}}</h5></a>
                             </div>
                             <div class="movie-detail">
                                 <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">{{this.luotdanhgia}}</label></button>
