--- a/src/resource/views/movie_review.hbs
+++ b/src/resource/views/movie_review.hbs
@@ -30,13 +30,13 @@
                     <div class="row">
                         
                         <div class="movie-image  col-md-3">
-                            <a href="#">
+                            <a href="/chi-tiet-binh-luan-phim/{{this.matin}}">
                                 <img src="{{this.hinhanh}}">
                             </a>
                         </div>
                         <div class="movie-info col-md-8">
                             <div class="movie-name">
-                                <a href="#"><h5>[Review] {{this.tieude}}</h5></a>
+                                <a href="/chi-tiet-binh-luan-phim/{{this.matin}}"><h5>[Review] {{this.tieude}}</h5></a>
                             </div>
                             <div class="movie-detail">
                                 <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">{{this.luotdanhgia}}</label></button>
