--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -140,9 +140,9 @@
                         GÓC ĐIỆN ẢNH
                     </a>
                     <ul class="dropdown-menu" style="background-color: black;">
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">THỂ LOẠI PHIM</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">DIỄN VIÊN</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">ĐẠO DIỄN</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/the-loai-phim">THỂ LOẠI PHIM</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/dien-vien">DIỄN VIÊN</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/dao-dien">ĐẠO DIỄN</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="/binh-luan-phim">BÌNH LUẬN
                                 PHIM</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="/blog-dien-anh">BLOG ĐIỆN ẢNH</a>
