--- a/src/resource/views/register.hbs
+++ b/src/resource/views/register.hbs
@@ -100,7 +100,7 @@
                 <button id="btnSubmit" class="btn btn-success px-5" type="submit">Đăng ký</button>
               </div>
               <div class="form-group">
-                <p>Dã có tài khoản? <a href="/login">Đăng nhập ngay!</a></p>
+                <p>Đã có tài khoản? <a href="/login">Đăng nhập ngay!</a></p>
               </div>
           </form>
         </div>
