--- a/src/resource/views/actor.hbs
+++ b/src/resource/views/actor.hbs
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/actor.css">
+    <link rel="stylesheet" href="css/actor.css">
     <title>Danh sách diễn viên</title>
 </head>
 
@@ -41,23 +41,22 @@
                     </a>
                 </div>
                 <div class="actor-item">
+                    {{#each data}}
                     <div class="row">
-                        <div class="actor-image">
-                            <a href="#">
+                        <div class="actor-image col-md-3">
+                            <a href="/chi-tiet-dien-vien/{{madienvien}}">
                                 <img
-                                    src="https://www.goldderby.com/wp-content/uploads/2022/06/Chris-Evans-movies-ranked-1.webp">
+                                    src="/img/{{hinhanh}}">
                             </a>
                         </div>
-                        <div class="actor-info">
+                        <div class="actor-info col-md-8">
                             <div class="actor-name">
                                 <a href="#">
-                                    <h4>Chris Evans</h4>
+                                    <h4>{{ten}}</h4>
                                 </a>
                             </div>
                             <div class="actor-detail">
-                                <button type="button" class="btn btn-primary actor-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="actor-views-lbl">Lượt xem: <label id="count-view">0</label></label>
+                                <label class="actor-views-lbl">Lượt xem: <label id="count-view">{{luotxem}}</label></label>
                             </div>
                             <div class="actor-description">
                                 <p>
@@ -68,65 +67,9 @@
                             </div>
                         </div>
                     </div>
+                    {{/each}}
                 </div>
-                <div class="actor-item">
-                    <div class="row">
-                        <div class="actor-image">
-                            <a href="#">
-                                <img
-                                    src="https://www.goldderby.com/wp-content/uploads/2022/06/Chris-Evans-movies-ranked-1.webp">
-                            </a>
-                        </div>
-                        <div class="actor-info">
-                            <div class="actor-name">
-                                <a href="#">
-                                    <h4>Chris Evans</h4>
-                                </a>
-                            </div>
-                            <div class="actor-detail">
-                                <button type="button" class="btn btn-primary actor-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="actor-views-lbl">Lượt xem: <label id="count-view">0</label></label>
-                            </div>
-                            <div class="actor-description">
-                                <p>
-                                    Khác với Chris Hemsworth vẫn đang loay hoay trong hình tượng vị thần sấm sét, đa số
-                                    người hâm mộ vẫn nhìn nhận rõ ràng, Chris Evans và Captain America là hai con người
-                                    hoàn toàn khác nhau.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="actor-item">
-                    <div class="row">
-                        <div class="actor-image">
-                            <a href="#">
-                                <img
-                                    src="https://www.goldderby.com/wp-content/uploads/2022/06/Chris-Evans-movies-ranked-1.webp">
-                            </a>
-                        </div>
-                        <div class="actor-info">
-                            <div class="actor-name">
-                                <a href="#">
-                                    <h4>Chris Evans</h4>
-                                </a>
-                            </div>
-                            <div class="actor-detail">
-                                <button type="button" class="btn btn-primary actor-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="actor-views-lbl">Lượt xem: <label id="count-view">0</label></label>
-                            </div>
-                            <div class="actor-description">
-                                <p>
-                                    Khác với Chris Hemsworth vẫn đang loay hoay trong hình tượng vị thần sấm sét, đa số
-                                    người hâm mộ vẫn nhìn nhận rõ ràng, Chris Evans và Captain America là hai con người
-                                    hoàn toàn khác nhau.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
 
             <div class="col-md-3 right">
@@ -165,9 +108,10 @@
                 <div class="now-showing">
                     <h4>PHIM ĐANG CHIẾU</h4>
                 </div>
+                
                 <div class="row">
                     <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
+                        <a href="#">
                             <img class="movie-img"
                                 src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
                             <div class="hidden-buy-ticket">
@@ -180,36 +124,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img"
-                                src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img"
-                                src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="view-more">
                     <button class="view-more-btn">XEM THÊM <label id="right-arrow">→</label></button>
                 </div>
