--- a/src/resource/views/director.hbs
+++ b/src/resource/views/director.hbs
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/director.css">
+    <link rel="stylesheet" href="/css/director.css">
     <title>Danh sách đạo diễn</title>
 </head>
 
@@ -40,93 +40,31 @@
                         <h5>ĐẠO DIỄN</h5>
                     </a>
                 </div>
+                {{#each data}}
                 <div class="director-item">
                     <div class="row">
-                        <div class="director-image">
-                            <a href="#">
+                        <div class="director-image col-md-3">
+                            <a href="/chi-tiet-dao-dien/{{madaodien}}">
                                 <img
-                                    src="https://media.vov.vn/sites/default/files/styles/large/public/2023-01/james-wan-cuong-phim.jpg">
+                                    src="/img/{{hinhanh}}">
                             </a>
                         </div>
-                        <div class="director-info">
+                        <div class="director-info col-md-8">
                             <div class="director-name">
-                                <a href="#">
-                                    <h4>James Wan</h4>
+                                <a href="/chi-tiet-dao-dien/{{madaodien}}">
+                                    <h4>{{ten}}</h4>
                                 </a>
                             </div>
                             <div class="director-detail">
-                                <button type="button" class="btn btn-primary director-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="director-views-lbl">Lượt xem: <label id="count-view">0</label></label>
+                                <label class="director-views-lbl">Lượt xem: <label id="count-view">{{luotxem}}</label></label>
                             </div>
                             <div class="director-description">
-                                <p>
-                                    Khi Hollywood vẫn còn bị chỉ trích về nạn phân biệt chủng tộc, khi những tài năng da
-                                    màu đều phải chật vật để tìm chỗ đứng, một người đàn ông đã chứng minh rằng chỉ cần
-                                    có khả năng kiệt xuất thì dù ở đâu hay bất cứ vị trí nào, bạn cũng sẽ tỏa sáng
-                                </p>
+                                <p>{{mota}}</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="director-item">
-                    <div class="row">
-                        <div class="director-image">
-                            <a href="#">
-                                <img
-                                    src="https://media.vov.vn/sites/default/files/styles/large/public/2023-01/james-wan-cuong-phim.jpg">
-                            </a>
-                        </div>
-                        <div class="director-info">
-                            <div class="director-name">
-                                <a href="#">
-                                    <h4>James Wan</h4>
-                                </a>
-                            </div>
-                            <div class="director-detail">
-                                <button type="button" class="btn btn-primary director-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="director-views-lbl">Lượt xem: <label id="count-view">0</label></label>
-                            </div>
-                            <div class="director-description">
-                                <p>
-                                    Khi Hollywood vẫn còn bị chỉ trích về nạn phân biệt chủng tộc, khi những tài năng da
-                                    màu đều phải chật vật để tìm chỗ đứng, một người đàn ông đã chứng minh rằng chỉ cần
-                                    có khả năng kiệt xuất thì dù ở đâu hay bất cứ vị trí nào, bạn cũng sẽ tỏa sáng
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="director-item">
-                    <div class="row">
-                        <div class="director-image">
-                            <a href="#">
-                                <img
-                                    src="https://media.vov.vn/sites/default/files/styles/large/public/2023-01/james-wan-cuong-phim.jpg">
-                            </a>
-                        </div>
-                        <div class="director-info">
-                            <div class="director-name">
-                                <a href="#">
-                                    <h4>James Wan</h4>
-                                </a>
-                            </div>
-                            <div class="director-detail">
-                                <button type="button" class="btn btn-primary director-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="director-views-lbl">Lượt xem: <label id="count-view">0</label></label>
-                            </div>
-                            <div class="director-description">
-                                <p>
-                                    Khi Hollywood vẫn còn bị chỉ trích về nạn phân biệt chủng tộc, khi những tài năng da
-                                    màu đều phải chật vật để tìm chỗ đứng, một người đàn ông đã chứng minh rằng chỉ cần
-                                    có khả năng kiệt xuất thì dù ở đâu hay bất cứ vị trí nào, bạn cũng sẽ tỏa sáng
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
             </div>
 
             <div class="col-md-3 right">
@@ -167,7 +105,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
+                        <a href="#">
                             <img class="movie-img"
                                 src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
                             <div class="hidden-buy-ticket">
@@ -180,36 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img"
-                                src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img"
-                                src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="view-more">
                     <button class="view-more-btn">XEM THÊM <label id="right-arrow">→</label></button>
                 </div>
