--- a/src/resource/views/movie_genre.hbs
+++ b/src/resource/views/movie_genre.hbs
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/movie_genre.css">
+    <link rel="stylesheet" href="/css/movie_genre.css">
     <title>Thể loại phim</title>
 </head>
 
@@ -57,25 +57,22 @@
                         <h5>PHIM ĐIỆN ẢNH</h5>
                     </a>
                 </div>
+                {{#each data}}
                 <div class="movie-item">
                     <div class="row">
-                        <div class="movie-image">
-                            <a href="#">
+                        <div class="movie-image col-md-3">
+                            <a href="/chi-tiet-phim/{{maphim}}">
                                 <img
-                                    src="https://www.cgv.vn/media/catalog/product/cache/3/image/1800x/71252117777b696995f01934522c402d/b/l/black-panther-2-poster-1.jpg">
+                                    src="/img/{{poster}}">
                             </a>
                         </div>
-                        <div class="movie-info">
+                        <div class="movie-info col-md-8">
                             <div class="movie-name">
-                                <a href="#">
-                                    <h4>Biệt Đội Rất Ổn</h4>
+                                <a href="/chi-tiet-phim/{{maphim}}">
+                                    <h4>{{tenphim}}</h4>
                                 </a>
                             </div>
-                            <div class="movie-detail">
-                                <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="movie-views-lbl">Lượt xem: <label id="count-view">0</label></label>
-                            </div>
+
                             <div class="movie-description">
                                 <p>
                                     Màn kết hợp bất đắc dĩ của Biệt Đội Rất Ổn - Phong, Khuê và Gia Đình Cục Súc nhằm
@@ -86,64 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="movie-item">
-                    <div class="row">
-                        <div class="movie-image">
-                            <a href="#">
-                                <img
-                                    src="https://www.cgv.vn/media/catalog/product/cache/3/image/1800x/71252117777b696995f01934522c402d/b/l/black-panther-2-poster-1.jpg">
-                            </a>
-                        </div>
-                        <div class="movie-info">
-                            <div class="movie-name">
-                                <a href="#">
-                                    <h4>Biệt Đội Rất Ổn</h4>
-                                </a>
-                            </div>
-                            <div class="movie-detail">
-                                <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="movie-views-lbl">Lượt xem: <label id="count-view">0</label></label>
-                            </div>
-                            <div class="movie-description">
-                                <p>
-                                    Màn kết hợp bất đắc dĩ của Biệt Đội Rất Ổn - Phong, Khuê và Gia Đình Cục Súc nhằm
-                                    qua mắt “cô dâu, chú rể” tại khu resort sang chảnh hứa hẹn cực kỳ gay cấn, hồi hộp
-                                    nhưng không kém phần hài hước, xúc động.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="movie-item">
-                    <div class="row">
-                        <div class="movie-image">
-                            <a href="#">
-                                <img
-                                    src="https://www.cgv.vn/media/catalog/product/cache/3/image/1800x/71252117777b696995f01934522c402d/b/l/black-panther-2-poster-1.jpg">
-                            </a>
-                        </div>
-                        <div class="movie-info">
-                            <div class="movie-name">
-                                <a href="#">
-                                    <h4>Biệt Đội Rất Ổn</h4>
-                                </a>
-                            </div>
-                            <div class="movie-detail">
-                                <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label
-                                        id="count-like">0</label></button>
-                                <label class="movie-views-lbl">Lượt xem: <label id="count-view">0</label></label>
-                            </div>
-                            <div class="movie-description">
-                                <p>
-                                    Màn kết hợp bất đắc dĩ của Biệt Đội Rất Ổn - Phong, Khuê và Gia Đình Cục Súc nhằm
-                                    qua mắt “cô dâu, chú rể” tại khu resort sang chảnh hứa hẹn cực kỳ gay cấn, hồi hộp
-                                    nhưng không kém phần hài hước, xúc động.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
             </div>
 
             <div class="col-md-3 right">
@@ -182,51 +122,23 @@
                 <div class="now-showing">
                     <h4>PHIM ĐANG CHIẾU</h4>
                 </div>
+                {{#each data}}
                 <div class="row">
                     <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
+                        <a href="#">
                             <img class="movie-img"
-                                src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
+                                src="/img/{{poster}}" alt="">
                             <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
+                                <p><label class="age">C{{dotuoi}}</label></p>
                                 <button class="hidden-buy-ticket-btn">MUA VÉ</button>
                             </div>
                         </a>
                         <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
+                            <h5>{{tenphim}}</h5>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img"
-                                src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img"
-                                src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
                 <div class="view-more">
                     <button class="view-more-btn">XEM THÊM <label id="right-arrow">→</label></button>
                 </div>
